force-app/main/default/objects/CartItem/fields/ListPriceUnit__c.field-meta.xml
<CustomField>
    <fullName>ListPriceUnit__c</fullName>
    <label>List Price Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductUnits</valueSetName>
    </valueSet>
</CustomField>