force-app/main/default/objects/CartItem/fields/NB2B_Distribution_channel__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Distribution_channel__c</fullName>
    <label>XXXDistribution channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>