force-app/main/default/objects/CartItem/fields/NB2B_SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>NB2B_SalesOrg__c</fullName>
    <label>XXX_Sales Organization</label>
    <length>25</length>
    <type>Text</type>
</CustomField>