force-app/main/default/objects/CartItem/fields/NB2B_Shade__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Shade__c</fullName>
    <label>XXX_Shade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>