force-app/main/default/objects/CartItem/fields/NB2B_UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>NB2B_UnitPrice__c</fullName>
    <label>XXX_Unit Price</label>
    <length>32</length>
    <type>Text</type>
</CustomField>