force-app/main/default/objects/CartItem/fields/SalesPriceUnit__c.field-meta.xml
<CustomField>
    <fullName>SalesPriceUnit__c</fullName>
    <description>Unit of the sales price</description>
    <label>Sales Price Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductUnits</valueSetName>
    </valueSet>
</CustomField>